--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>magicbox-alipay</name>
+	<name>magic-box-alipay</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
